[fix] grid spacing

--- a/src/styles/base/_flexboxgrid.scss
+++ b/src/styles/base/_flexboxgrid.scss
@@ -71,8 +71,8 @@
   -webkit-box-flex: 0;
   -ms-flex: 0 0 auto;
   flex: 0 0 auto;
-  padding-right: 0.5rem;
-  padding-left: 0.5rem;
+  padding-right: 5px;
+  padding-left: 5px;
 }
 
 .col-xs {
@@ -302,8 +302,8 @@
     -webkit-box-flex: 0;
     -ms-flex: 0 0 auto;
     flex: 0 0 auto;
-    padding-right: 0.5rem;
-    padding-left: 0.5rem;
+    padding-right: 5px;
+    padding-left: 5px;
   }
 
   .col-sm {
@@ -534,8 +534,8 @@
     -webkit-box-flex: 0;
     -ms-flex: 0 0 auto;
     flex: 0 0 auto;
-    padding-right: 0.5rem;
-    padding-left: 0.5rem;
+    padding-right: 10px;
+    padding-left: 10px;
   }
 
   .col-md {
@@ -766,8 +766,8 @@
     -webkit-box-flex: 0;
     -ms-flex: 0 0 auto;
     flex: 0 0 auto;
-    padding-right: 0.5rem;
-    padding-left: 0.5rem;
+    padding-right: 20px;
+    padding-left: 20px;
   }
 
   .col-lg {
